# mcp_jira

./: DEVELOPMENT.md  README.md  SETUP_ASSISTANT_PROMPT.md  SETUP_PROMPT.md  USAGE_ASSISTANT_PROMPT.md  pyproject.toml
.claude/commands/: quick-setup-jira.md
mcp_jira/: config.py
mcp_jira/server/: app.py
mcp_jira/services/: jira_service.py
mcp_jira/tools/: jira_tools.py
mcp_jira/ui/: app.py  components.py  config_io.py  state_manager.py
